# tech-library

./: .gitignore  LICENSE  docker-compose.yml  nginx.conf
.docker/web/: Dockerfile
api/: .env  Cargo.toml  Dockerfile
api/configuration/: base.yaml  local.yaml  production.yaml
api/src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs
api/src/controllers/: health_check.rs  index.rs
api/tests/api/: health_check.rs  helpers.rs
web/: Dockerfile  package.json
web/src/: App.tsx
web/src/pages/: index.tsx
