[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
actix-web = "4.0.1"
secrecy = { version = "0.8.0", features = ["serde"] }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
